--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,8 @@ add_executable(
   FredEmmott/memory/memory_detail.hpp
   FredEmmott/GUI/yoga.hpp
   FredEmmott/GUI/SystemColor.cpp FredEmmott/GUI/SystemColor.hpp
+  FredEmmott/GUI/Color.cpp FredEmmott/GUI/Color.hpp
+  FredEmmott/GUI/Font.hpp
   FredEmmott/GUI/Label.cpp FredEmmott/GUI/Label.hpp
   FredEmmott/GUI/SystemFont.cpp FredEmmott/GUI/SystemFont.hpp
   FredEmmott/GUI/Widget.cpp FredEmmott/GUI/Widget.hpp
