Add WidgetColor namespace

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ add_executable(
   FredEmmott/GUI/Label.cpp FredEmmott/GUI/Label.hpp
   FredEmmott/GUI/SystemFont.cpp FredEmmott/GUI/SystemFont.hpp
   FredEmmott/GUI/Widget.cpp FredEmmott/GUI/Widget.hpp
+  FredEmmott/GUI/WidgetColor.cpp FredEmmott/GUI/WidgetColor.hpp
 )
 target_link_libraries(
   HelloSkia-Win32-Ganesh-D3D12
