🚚 Don't put all the theme constant definitions in the header file
ODR

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,34 +1,5 @@
-find_package(unofficial-skia CONFIG REQUIRED)
 find_package(yoga CONFIG REQUIRED)
-
-# Add our own target to do some changes
-add_library(skia INTERFACE)
-target_link_libraries(skia INTERFACE unofficial::skia::skia)
-target_compile_definitions(
-  skia
-  INTERFACE
-  # Required for compatibility with <Windows.h>
-  "NOMINMAX=1"
-)
-
-# The default target requires `#include <core/SkCanvas.h>`; also allow `#include <skia/core/SkCanvas.h>` for readability
-get_target_property(SKIA_INCLUDE_DIRECTORIES unofficial::skia::skia INTERFACE_INCLUDE_DIRECTORIES)
-set(HAVE_SKIA_CORE_CANVAS_H OFF)
-foreach (PATH IN LISTS SKIA_INCLUDE_DIRECTORIES)
-  if (EXISTS "$PATH}/skia/core/canvas.h")
-    set(HAVE_SKIA_CORE_CANVAS_H ON)
-    break()
-  endif ()
-endforeach ()
-if (NOT HAVE_SKIA_CORE_CANVAS_H)
-  foreach (PATH IN LISTS SKIA_INCLUDE_DIRECTORIES)
-    cmake_path(GET PATH FILENAME TAIL)
-    if (TAIL STREQUAL "skia")
-      cmake_path(GET PATH PARENT_PATH PARENT)
-      target_include_directories(skia INTERFACE "${PARENT}")
-    endif ()
-  endforeach ()
-endif ()
+include(skia)
 
 add_executable(
   HelloSkia-Win32-Ganesh-D3D12
@@ -104,7 +75,7 @@ target_link_libraries(
 target_compile_definitions(
   HelloSkia-Win32-Ganesh-D3D12
   PRIVATE
-  "UNICODE=1"
+  " UNICODE=1"
   "_UNICODE=1"
 )
 target_include_directories(
