🐛 Completely rework layout, especially Labels
Want flexShrink =0 by default on everything; this mostly fixes text rendering.

There isn't a visual effect here; however, it allows correctly calculating the minimum content size, which will be needed for popups

refs #4

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,7 @@ add_executable(
   FredEmmott/GUI/detail/immediate/Widget.hpp
   FredEmmott/GUI/detail/immediate_detail.cpp FredEmmott/GUI/detail/immediate_detail.hpp
   FredEmmott/GUI/detail/widget_detail.hpp
+  FredEmmott/GUI/detail/style_detail.hpp
   FredEmmott/GUI/events/Event.hpp
   FredEmmott/GUI/events/MouseButton.hpp
   FredEmmott/GUI/events/MouseButtonPressEvent.hpp
