🚚 Rename window class to be appropriate for FUI
refs #3
refs #4

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,14 @@ add_subdirectory(xaml-to-fui-statictheme)
 add_executable(
   HelloSkia-Win32-Ganesh-D3D12
   WIN32
-  Win32-Ganesh-D3D12.cpp
-  Win32-Ganesh-D3D12.hpp
   app.exe.manifest
+  main.cpp
 
+  FredEmmott/GUI.hpp
   FredEmmott/GUI/ActivatedFlag.hpp
   FredEmmott/GUI/Brush.hpp
   FredEmmott/GUI/Color.hpp
+  FredEmmott/GUI/EasingFunctions.hpp
   FredEmmott/GUI/Font.cpp FredEmmott/GUI/Font.hpp
   FredEmmott/GUI/Immediate/Button.hpp
   FredEmmott/GUI/Immediate/Card.hpp
@@ -23,17 +24,16 @@ add_executable(
   FredEmmott/GUI/Immediate/StackPanel.hpp
   FredEmmott/GUI/Immediate/ToggleSwitch.cpp FredEmmott/GUI/Immediate/ToggleSwitch.hpp
   FredEmmott/GUI/Immediate/concepts.hpp
+  FredEmmott/GUI/Interpolation/CubicBezier.hpp
+  FredEmmott/GUI/Interpolation/Linear.cpp FredEmmott/GUI/Interpolation/Linear.hpp
   FredEmmott/GUI/LinearGradientBrush.cpp FredEmmott/GUI/LinearGradientBrush.hpp
   FredEmmott/GUI/SolidColorBrush.hpp
   FredEmmott/GUI/StaticTheme.cpp FredEmmott/GUI/StaticTheme.hpp
-  FredEmmott/GUI/Style.cpp FredEmmott/GUI/Style.hpp
-  FredEmmott/GUI/EasingFunctions.hpp
-  FredEmmott/GUI/Interpolation/CubicBezier.hpp
-  FredEmmott/GUI/Interpolation/Linear.cpp FredEmmott/GUI/Interpolation/Linear.hpp
   FredEmmott/GUI/StaticTheme/Resource.hpp
   FredEmmott/GUI/StaticTheme/Theme.hpp
   FredEmmott/GUI/StaticTheme/detail/ResolveColor.hpp
   FredEmmott/GUI/StaticTheme/detail/StaticThemedLinearGradientBrush.hpp
+  FredEmmott/GUI/Style.cpp FredEmmott/GUI/Style.hpp
   FredEmmott/GUI/StyleProperty.hpp>
   FredEmmott/GUI/StyleTransition.hpp
   FredEmmott/GUI/SystemFont.cpp FredEmmott/GUI/SystemFont.hpp
@@ -46,16 +46,18 @@ add_executable(
   FredEmmott/GUI/Widgets/ToggleSwitch.cpp FredEmmott/GUI/Widgets/ToggleSwitch.hpp
   FredEmmott/GUI/Widgets/ToggleSwitchKnob.cpp FredEmmott/GUI/Widgets/ToggleSwitchKnob.hpp
   FredEmmott/GUI/Widgets/ToggleSwitchThumb.cpp FredEmmott/GUI/Widgets/ToggleSwitchThumb.hpp
-  FredEmmott/GUI/Widgets/Widget.hpp
   FredEmmott/GUI/Widgets/Widget.cpp
+  FredEmmott/GUI/Widgets/Widget.hpp
+  FredEmmott/GUI/Widgets/WidgetStyles.cpp FredEmmott/GUI/Widgets/WidgetStyles.hpp
   FredEmmott/GUI/Widgets/Widget_ComputeStyles.cpp
   FredEmmott/GUI/Widgets/Widget_StyleTransitions.cpp
-  FredEmmott/GUI/Widgets/WidgetStyles.cpp FredEmmott/GUI/Widgets/WidgetStyles.hpp
+  FredEmmott/GUI/Windows/Win32-Ganesh-D3D12.cpp
+  FredEmmott/GUI/Windows/Win32-Ganesh-D3D12.hpp
   FredEmmott/GUI/detail/font_detail.hpp
   FredEmmott/GUI/detail/immediate/Widget.hpp
   FredEmmott/GUI/detail/immediate_detail.cpp FredEmmott/GUI/detail/immediate_detail.hpp
-  FredEmmott/GUI/detail/widget_detail.hpp
   FredEmmott/GUI/detail/style_detail.hpp
+  FredEmmott/GUI/detail/widget_detail.hpp
   FredEmmott/GUI/events/Event.hpp
   FredEmmott/GUI/events/MouseButton.hpp
   FredEmmott/GUI/events/MouseButtonPressEvent.hpp
@@ -69,7 +71,6 @@ add_executable(
   FredEmmott/utility/bitflag_enums.hpp
   FredEmmott/utility/lazy_init.hpp
   FredEmmott/utility/type_tag.hpp
-  main.cpp
 )
 target_link_libraries(
   HelloSkia-Win32-Ganesh-D3D12
