🚧 Start of multi-line text
Does not currently re-layout when widget size is changed; measure func is not called.

refs #7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if ("${VCPKG_TARGET_TRIPLET}" MATCHES "-static$")
     "/DEFAULTLIB:ucrt$<$<CONFIG:Debug>:d>.lib" # include the dynamic UCRT
     "/NODEFAULTLIB:libucrt$<$<CONFIG:Debug>:d>.lib" # remove the static UCRT
   )
+else ()
+  message(WARNING "Advanced text features require SkParagraph, which is only available with vcpkg static triplets}")
 endif ()
 
 set(
