🚧 Initial rendering of ScrollBar
Non-interactive, doesn't reflect value, lots of parts missing

refs #8

--- a/src/xaml-to-fui-statictheme/CMakeLists.txt
+++ b/src/xaml-to-fui-statictheme/CMakeLists.txt
@@ -152,8 +152,10 @@ add_winui3_component_theme(
 )
 
 add_winui3_component_theme(Deprecated)
-
 add_winui3_component_theme(Button PARENT Deprecated)
 add_winui3_component_theme(ComboBox PARENT Button)
 
+add_winui3_component_theme(ScrollBar)
+add_winui3_component_theme(ScrollView)
 add_winui3_component_theme(ToggleSwitch)
+
