🚚 Split out StyleClass and StyleClasses from Style.hpp
prep for actual rules

refs #10

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(
   FredEmmott/GUI/StaticTheme/detail/ResolveColor.hpp
   FredEmmott/GUI/StaticTheme/detail/StaticThemedLinearGradientBrush.hpp
   FredEmmott/GUI/Style.cpp FredEmmott/GUI/Style.hpp
+  FredEmmott/GUI/StyleClass.cpp FredEmmott/GUI/StyleClass.hpp
   FredEmmott/GUI/StyleProperty.hpp>
   FredEmmott/GUI/StyleTransition.hpp
   FredEmmott/GUI/SystemFont.cpp FredEmmott/GUI/SystemFont.hpp
